oap-template